# reimagined-telegram

./: Cargo.toml
tega-bin/: Cargo.toml
tega-bin/src/: main.rs
tega-client/: Cargo.toml
tega-client/src/: lib.rs
tega-types/: Cargo.toml  build.rs
tega-types/samples/: api-status.json  api-system_status.json
tega-types/src/: legal.rs  lib.rs  login.rs  meters.rs  serde.rs  status.rs  system_status.rs
tega-types/src/meters/: aggregates.rs
tega-types/src/protos/: mod.rs  tesla.proto  vitals.proto
tega-types/src/system_status/: mod.rs
