[package]
name = "tega-client"
version = "0.0.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "tokio-rustls", "rustls", "rustls-tls", "cookies"], default-features = false }
rustls = { version = "0.21.6", features = ["dangerous_configuration"] }
serde = { version = "1", features = ["derive"] }
tega-types = { version = "0.0.0", path = "../tega-types" }
